# ledger-device-rust-sdk

./: README.md
ledger_device_sdk/: link_wrap.sh
ledger_device_sdk/src/: lib.rs
ledger_secure_sdk_sys/: Cargo.toml  build.rs
ledger_secure_sdk_sys/src/c/: src.c
ledger_secure_sdk_sys/src/c/osx/: compat.h  elf.h
